cilium-gateway/influxdb-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: influxdb-gateway
  namespace: influxdb
spec:
  gatewayClassName: cilium
  listeners:
  - protocol: HTTP
    port: 80
    name: influxdb2
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: influxdb-httproute
  namespace: influxdb
spec:
  parentRefs:
  - name: influxdb-gateway
    namespace: influxdb
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: influxdb-influxdb2
      port: 80
