cilium-gateway/marquez-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: marquez-web-gateway
spec:
  gatewayClassName: cilium
  listeners:
  - protocol: HTTP
    port: 8080
    name: marquez-web
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: marquez-api-gateway
spec:
  gatewayClassName: cilium
  listeners:
  - protocol: HTTP
    port: 5000
    name: marquez-api
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: marquez-web-httproute
spec:
  parentRefs:
  - name: marquez-web-gateway
    namespace: default
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: marquez-web
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: marquez-api-httproute
spec:
  parentRefs:
  - name: marquez-api-gateway
    namespace: default
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: marquez
      port: 80
