cilium-gateway/minio-o-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: minio-o-gateway
  namespace: minio-o
spec:
  gatewayClassName: cilium
  listeners:
  - protocol: HTTP
    port: 80
    name: minio-o
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-o-httproute
  namespace: minio-o
spec:
  parentRefs:
  - name: minio-o-gateway
    namespace: minio-o
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: minio-tenant-level-o-console
      port: 9090
