cilium-gateway/minio-s-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: minio-s-gateway
  namespace: minio-s
spec:
  gatewayClassName: cilium
  listeners:
  - protocol: HTTP
    port: 80
    name: minio-s
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-s-httproute
  namespace: minio-s
spec:
  parentRefs:
  - name: minio-s-gateway
    namespace: minio-s
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: minio-tenant-level-s-console
      port: 9090
